set up main index

--- a/home.html
+++ b/home.html
@@ -4,8 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>50 mini projects challenge</title>
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <a href="expandingcards/index.html">Expanding Cards</a>
+    <header><h1>50 mini projects challenge</h1></header>
+    <main id="main">
+      <div class="list">
+        <a href="expandingcards/index.html">Expanding Cards</a>
+      </div>
+    </main>
   </body>
 </html>
