--- a/expandingcards/index.html
+++ b/expandingcards/index.html
@@ -22,6 +22,7 @@
       #main {
         display: flex;
         width: 90vw;
+        overflow: hidden;
       }
       .image {
         position: relative;
@@ -57,6 +58,15 @@
       .subtitle:hover {
         cursor: pointer;
         border: black 4px dashed;
+      }
+      @media (max-width: 700px) {
+        body {
+          align-items: unset;
+        }
+        #main {
+          flex-direction: column;
+          margin: 10px;
+        }
       }
     </style>
   </head>
