--- a/expandingcards/index.html
+++ b/expandingcards/index.html
@@ -15,9 +15,21 @@
         padding: 0;
         height: 100vh;
         display: flex;
+        flex-direction: column;
         align-items: center;
         justify-content: center;
         font-family: 'Roboto', sans-serif;
+      }
+      header {
+        margin: 10px;
+      }
+      .back-btn {
+        background: goldenrod;
+        color: #333;
+        text-decoration: none;
+        font-size: 1.5rem;
+        cursor: pointer;
+        padding: 5px;
       }
       #main {
         display: flex;
@@ -71,6 +83,9 @@
     </style>
   </head>
   <body>
+    <header>
+      <a class="back-btn" href="/home.html">Back to homepage</a>
+    </header>
     <main id="main">
       <div
         class="image limelight"
