added progress steps project

--- a/home.html
+++ b/home.html
@@ -11,6 +11,7 @@
     <main id="main">
       <div class="list">
         <a href="expandingcards/index.html">Expanding Cards</a>
+        <a href="progresssteps/index.html">Progress Steps</a>
       </div>
     </main>
   </body>
