added project three

--- a/home.html
+++ b/home.html
@@ -10,8 +10,11 @@
     <header><h1>50 mini projects challenge</h1></header>
     <main id="main">
       <div class="list">
-        <a href="expandingcards/index.html">Expanding Cards</a>
-        <a href="progresssteps/index.html">Progress Steps</a>
+        <a href="expandingcards/index.html" class="red">Expanding Cards</a>
+        <a href="progresssteps/index.html" class="red">Progress Steps</a>
+        <a href="rotatingnavigation/index.html" class="red"
+          >Rotating Navigation Animation</a
+        >
       </div>
     </main>
   </body>
