--- a/progresssteps/index.html
+++ b/progresssteps/index.html
@@ -70,6 +70,7 @@
         position: relative;
         width: 30px;
         height: 30px;
+        padding: 5px;
         border-radius: 50%;
         border: lightgray solid 3px;
         display: flex;
