added project four

--- a/home.html
+++ b/home.html
@@ -15,6 +15,7 @@
         <a href="rotatingnavigation/index.html" class="red"
           >Rotating Navigation Animation</a
         >
+        <a href="hiddensearch/index.html" class="red">Hidden Search Widget</a>
       </div>
     </main>
   </body>
