added back btn to project four

--- a/hiddensearch/index.html
+++ b/hiddensearch/index.html
@@ -22,6 +22,16 @@
         background-color: lightsalmon;
         font-size: 18px;
       }
+      .back-btn {
+        margin-left: 40%;
+        background: ghostwhite;
+
+        color: #333;
+        text-decoration: none;
+        font-size: 1.5rem;
+        cursor: pointer;
+        padding: 5px;
+      }
       #main {
         position: absolute;
         top: 50%;
@@ -30,7 +40,6 @@
       }
       .container {
         padding: 20px;
-
         display: flex;
         justify-content: center;
       }
@@ -60,6 +69,9 @@
     </style>
   </head>
   <body>
+    <header>
+      <a class="back-btn" href="/home.html">Back to homepage</a>
+    </header>
     <div id="main">
       <div class="container">
         <input
