added project five

--- a/home.html
+++ b/home.html
@@ -16,6 +16,7 @@
           >Rotating Navigation Animation</a
         >
         <a href="hiddensearch/index.html" class="red">Hidden Search Widget</a>
+        <a href="blurryloading/index.html" class="red">Blurry Loading</a>
       </div>
     </main>
   </body>
