--- a/home.html
+++ b/home.html
@@ -17,6 +17,7 @@
         >
         <a href="hiddensearch/index.html" class="red">Hidden Search Widget</a>
         <a href="blurryloading/index.html" class="red">Blurry Loading</a>
+        <a href="scrollanimation/index.html" class="red">Blurry Loading</a>
       </div>
     </main>
   </body>
