added project seven

--- a/home.html
+++ b/home.html
@@ -18,6 +18,8 @@
         <a href="hiddensearch/index.html" class="red">Hidden Search Widget</a>
         <a href="blurryloading/index.html" class="red">Blurry Loading</a>
         <a href="scrollanimation/index.html" class="red">Scroll Animation</a>
+        <a href="splitlanding/index.html" class="red">Split Landing Page</a>
+        <a href="formwave/index.html" class="red">Wave Animation Form</a>
       </div>
     </main>
   </body>
