--- a/scrollanimation/index.html
+++ b/scrollanimation/index.html
@@ -61,7 +61,15 @@
         transform:translateX(0) scale(1);
         opacity:1;
       }
-    
+    @media(max-width:678px){
+      .content{
+        width:50%;
+        height:100px;
+        }
+        .back-btn{
+          margin:0;
+        }
+    }
     </style>
   </head>
   <body>
