--- a/blurryloading/index.html
+++ b/blurryloading/index.html
@@ -18,6 +18,7 @@
         overflow: hidden;
       }
       .back-btn {
+        z-index: 3;
         margin-left: 40%;
         background: lavender;
         color: #333;
@@ -26,6 +27,7 @@
         cursor: pointer;
         padding: 5px;
         position: absolute;
+        animation: load 7s forwards;
       }
       #main {
         position: relative;
@@ -46,6 +48,7 @@
       }
       img {
         width: 100vw;
+        height: 100vh;
         animation: load 7s forwards;
       }
       @keyframes load {
@@ -57,6 +60,16 @@
         }
         50% {
           filter: blur(0.8rem);
+        }
+      }
+      @media (max-width: 678px) {
+        .message {
+          top: 60%;
+          font-size: 1.3rem;
+        }
+        .message,
+        .loader {
+          left: 30%;
         }
       }
     </style>
