fixed homepage link

--- a/home.html
+++ b/home.html
@@ -19,7 +19,7 @@
         <a href="blurryloading/index.html" class="red">Blurry Loading</a>
         <a href="scrollanimation/index.html" class="red">Scroll Animation</a>
         <a href="splitlanding/index.html" class="red">Split Landing Page</a>
-        <a href="formwave/index.html" class="red">Wave Animation Form</a>
+        <a href="waveform/index.html" class="red">Wave Animation Form</a>
       </div>
     </main>
   </body>
