added project nine and made some tweaks in css

--- a/splitlanding/index.html
+++ b/splitlanding/index.html
@@ -94,6 +94,9 @@
         .back-btn {
           margin-left: 0;
         }
+        h2 {
+          font-size: 1rem;
+        }
         #main {
           flex-direction: column;
           height: 100vh;
