--- a/home.html
+++ b/home.html
@@ -20,6 +20,7 @@
         <a href="scrollanimation/index.html" class="red">Scroll Animation</a>
         <a href="splitlanding/index.html" class="red">Split Landing Page</a>
         <a href="waveform/index.html" class="orange">Wave Animation Form</a>
+        <a href="soundboard/index.html" class="orange">Sound Board</a>
       </div>
     </main>
   </body>
