added project ten

--- a/home.html
+++ b/home.html
@@ -21,6 +21,7 @@
         <a href="splitlanding/index.html" class="red">Split Landing Page</a>
         <a href="waveform/index.html" class="orange">Wave Animation Form</a>
         <a href="soundboard/index.html" class="orange">Sound Board</a>
+        <a href="dadjokes/index.html" class="orange">Dad Jokes</a>
       </div>
     </main>
   </body>
