added eleventh project

--- a/home.html
+++ b/home.html
@@ -22,6 +22,7 @@
         <a href="waveform/index.html" class="orange">Wave Animation Form</a>
         <a href="soundboard/index.html" class="orange">Sound Board</a>
         <a href="dadjokes/index.html" class="orange">Dad Jokes</a>
+        <a href="eventkeys/index.html" class="orange">Event Keys</a>
       </div>
     </main>
   </body>
