added 12th project

--- a/home.html
+++ b/home.html
@@ -23,6 +23,7 @@
         <a href="soundboard/index.html" class="orange">Sound Board</a>
         <a href="dadjokes/index.html" class="orange">Dad Jokes</a>
         <a href="eventkeys/index.html" class="orange">Event Keys</a>
+        <a href="faqcollapse/index.html" class="orange">FAQ Collapse</a>
       </div>
     </main>
   </body>
