added back links

--- a/eventkeys/index.html
+++ b/eventkeys/index.html
@@ -12,6 +12,7 @@
       body {
         display: flex;
         height: 100vh;
+        flex-direction: column;
         justify-content: center;
         align-items: center;
         font-size: 16px;
@@ -46,6 +47,9 @@
     </style>
   </head>
   <body>
+    <header>
+      <a href="/home.html">Back to homepage</a>
+    </header>
     <main id="main">
       <h2>Press any key to get the keyCode</h2>
       <div class="keys">
