--- a/faqcollapse/index.html
+++ b/faqcollapse/index.html
@@ -27,6 +27,9 @@
         background-color: whitesmoke;
         font-family: 'Quicksand', sans-serif;
       }
+      header {
+        text-align: center;
+      }
       .container {
         display: flex;
         flex-direction: column;
@@ -97,6 +100,7 @@
   <body>
     <header>
       <h1>Collapsing F.A.Q.</h1>
+      <a href="/home.html">Back to homepage</a>
     </header>
     <main>
       <div class="container">
