added project 14 and some tweaks

--- a/home.html
+++ b/home.html
@@ -24,6 +24,8 @@
         <a href="dadjokes/index.html" class="orange">Dad Jokes</a>
         <a href="eventkeys/index.html" class="orange">Event Keys</a>
         <a href="faqcollapse/index.html" class="orange">FAQ Collapse</a>
+        <a href="randomselect/index.html" class="orange">Random Select</a>
+        <a href="animatednav/index.html" class="orange">Animated Nav</a>
       </div>
     </main>
   </body>
