--- a/home.html
+++ b/home.html
@@ -26,6 +26,9 @@
         <a href="faqcollapse/index.html" class="orange">FAQ Collapse</a>
         <a href="randomselect/index.html" class="orange">Random Select</a>
         <a href="animatednav/index.html" class="orange">Animated Nav</a>
+        <a href="incrementingcounters/index.html" class="yellow"
+          >Incrementing Counters</a
+        >
       </div>
     </main>
   </body>
